@@ -1188,6 +1188,20 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     NULL
   },
+  { /* Canon PIXMA MP530 */
+    "PIXMA MP530", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    /* 16, */
+    &canon_MULTIPASS_MP530_slotlist,
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_I|CANON_CAP_P|CANON_CAP_r,0x64,control_cmd_PIXMA_iP4200,  /*features */
+    &canon_MULTIPASS_MP530_modelist,
+    &canon_MULTIPASS_MP600_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
   { /* Canon PIXMA MP540 */
     "PIXMA MP540", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
